--- a/configclient/pom.xml
+++ b/configclient/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -12,9 +13,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-	<groupId>com.xylem</groupId>
-	<artifactId>cloudconfiguration</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+		<groupId>com.xylem</groupId>
+		<artifactId>cloudconfiguration</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -25,11 +26,23 @@
 	</properties>
 
 	<dependencies>
+		<!-- every config client should have this dependency , which is used to 
+			communicate to config server using props configured in bootstrap.properties -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
-
+		<!-- for demoing of sample rest end point we need this dependency -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<!-- after updating props in config server, we can get latest prop value 
+			by refreshing /actuator/refresh -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
