--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -11,11 +12,11 @@
 	<name>configserver</name>
 	<description>Demo project for Spring Boot</description>
 
-	
-		<parent>
-	<groupId>com.xylem</groupId>
-	<artifactId>cloudconfiguration</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+
+	<parent>
+		<groupId>com.xylem</groupId>
+		<artifactId>cloudconfiguration</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 
@@ -27,11 +28,11 @@
 	</properties>
 
 	<dependencies>
+		<!-- below dependency should be added for config server -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
